--- a/src/style.css
+++ b/src/style.css
@@ -4,23 +4,23 @@
 }
 
 .middle{
-    height: 350px;
-    border: 1px solid red;
+    /* height: 450px; */
+    border: 1px solid silver;
     border-radius: 10px;
 }
 
 .bottom{
     height: 450px;
-    border: 1px solid red;
+    border: 1px solid silver;
     border-radius: 10px;
 }
 
 .row.bottom{
     height:130px;
-    border: 1px solid green;
+    border: 1px solid silver;
 }
 
 .col-2.completed{
-    border: 1px solid purple;
+    border: 1px solid silver;
     border-radius: 10px;
 }
