--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,32 @@
 .container{
     /* height: 550px; */
-    border: 1px black;
+    border:
+     1px black;
+}
+
+.cell{
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+    margin: 3px;
+    
+}
+
+.cell:hover{
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.mask{
+    background-color: rgba(251, 251, 251, 0.2);
 }
 
 .middle{
     /* height: 450px; */
-    border: 1px solid silver;
+    /* border: 1px solid silver; */
     border-radius: 10px;
 }
 
 .bottom{
     height: 450px;
-    border: 1px solid silver;
+    /* border: 1px solid silver; */
     border-radius: 10px;
 }
 
@@ -21,10 +36,16 @@
 }
 
 .col-2.completed{
-    border: 1px solid silver;
+    /* border: 1px solid silver; */
     border-radius: 10px;
 }
 
 .markComplete{
     background-color: lightblue;
 }
+
+.drop:hover{
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+
