--- a/src/style.css
+++ b/src/style.css
@@ -4,13 +4,13 @@
      1px black;
 }
 
-.cell{
+#cell{
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
     margin: 3px;
     
 }
 
-.cell:hover{
+#cell:hover{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
@@ -42,21 +42,24 @@
 
 .markComplete{
     background-color: rgba(234, 236, 238, 0.85);
-    
-    
+    color:#FF5349;
+    font-size: 20px;
+    position: absolute;
+    right: 3px;
+    top: 3px;
 }
 
 .drop:hover{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.bi{
+.bi.bi-check-circle{
     font-size: 20px;
     position: absolute;
     top: 3px;
     right: 3px;
-    color:#FF5349;
 }
+
 
 
 
