updated cells CSS

--- a/src/style.css
+++ b/src/style.css
@@ -5,13 +5,14 @@
 }
 
 #cell{
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
     margin: 3px;
     
 }
 
 #cell:hover{
-    box-shadow: rgb(255,83,73) 0px 0px 0px .5px;
+    box-shadow: rgb(255,83,73) 0px 0.0625em 0.0625em, rgb(255,83,73) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    
 }
 
 .mask{
