--- a/src/style.css
+++ b/src/style.css
@@ -31,8 +31,8 @@
 }
 
 .row.bottom{
-    height:130px;
-    border: 1px solid none;
+    height:100px;
+    border: 1px solid black;
 }
 
 .col-2.completed{
