--- a/src/style.css
+++ b/src/style.css
@@ -6,8 +6,6 @@
 
 #cell{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
-    margin: 3px;
-    
 }
 
 #cell:hover{
@@ -32,7 +30,7 @@
 
 .row.bottom{
     height:100px;
-    border: 1px solid black;
+    border: .25px solid #FF5349;
 }
 
 .col-2.completed{
